--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "@vue/cli-service": "^3.10.0",
     "@vue/eslint-config-airbnb": "^4.0.0",
     "babel-eslint": "^10.0.1",
+    "bootstrap": "^4.3.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.15.0",
     "vue-template-compiler": "^2.6.10"
   }
 }
