--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "qui",
   "version": "0.1.0",
+  "engines": {
+    "node": "10.12.0",
+    "npm": "6.x"
+  },
   "private": true,
   "scripts": {
     "start": "node server.js",
