--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "engines": {
     "node": "10.12.0",
-    "npm": "6.x"
+    "npm": "6.4.1"
   },
   "private": true,
   "scripts": {
