--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mdi/font": "^4.4.95",
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "express": "^4.17.1",
     "serve-static": "^1.14.1",
     "vue": "^2.6.10",
+    "vue-material-design-icons": "^4.1.0",
     "vue-ripple-directive": "^2.0.1",
     "vue-router": "^3.0.3",
     "vuetify": "^2.0.10",
