--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
   },
   "dependencies": {
     "@mdi/font": "^4.4.95",
-    "axios": "^0.19.0",
+    "axios": "^0.19.2",
     "core-js": "^2.6.5",
     "express": "^4.17.1",
     "serve-static": "^1.14.1",
     "vue": "^2.6.10",
     "vue-material-design-icons": "^4.1.0",
+    "vue-notification": "^1.3.20",
     "vue-ripple-directive": "^2.0.1",
     "vue-router": "^3.0.3",
     "vuetify": "^2.0.10",
