--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.17.1",
     "serve-static": "^1.14.1",
     "vue": "^2.6.10",
+    "vue-lazyload": "^1.3.3",
     "vue-material-design-icons": "^4.1.0",
     "vue-notification": "^1.3.20",
     "vue-ripple-directive": "^2.0.1",
